--- a/src/main/resources/templates/users/profileForm.html
+++ b/src/main/resources/templates/users/profileForm.html
@@ -65,7 +65,7 @@
 
                 $.ajax({
                     url : url2,
-                    type: "GET",
+                    type: "POST",
                     beforeSend : function(xhr){
                         /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
                         xhr.setRequestHeader(header, token);
